@@ -632,8 +632,7 @@ root@lists:~# </programlisting>
     provided with <link linkend="Concepts">the sample</link>. Otherwise, edit
     <filename
     class="directory">/etc/shorewall/</filename><filename>masq</filename> and
-    change the first column to the name of your external interface and the
-    second column to the name of your internal interface.</para>
+    change the first column to the name of your external interface.</para>
 
     <para><inlinegraphic fileref="images/BD21298_.gif" format="GIF" /></para>
 
