@@ -8,6 +8,8 @@ Changes in Shorewall 4.3.10
 
 4) Fix handling of class IDs.
 
+5) Deprecate use of an interface in the SOURCE column of /etc/shorewall/masq.
+
 Changes in Shorewall 4.3.9
 
 1) Logging rules now create separate chain.
